added all kinds of styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script type="text/javascript" src="//use.typekit.net/vhr1yyf.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script type="text/javascript" src="jam/require.js"></script>
     <script type="text/javascript">
       require(['app'], function(app){
@@ -9,6 +11,48 @@
     </script>
   </head>
   <body>
+    <div class="header-navbar">
+      <div class="container">
+        <img src="img/logo.png" alt="" class="logo">
+        <!-- <ul class="nav">
+          <li>
+            <a href="/#/explore"></a>
+          </li>
+          <li>
+            <a href="/#/my-collections"></a>
+          </li>
+          <li class="dropdown">
+            <a href="/#/more"></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="#">How it Works</a>
+              </li>
+              <li>
+                <a href="#">Locations</a>
+              </li>
+              <li>
+                <a href="#">About Us</a>
+              </li>
+              <li>
+                <a href="#">Charities</a>
+              </li>
+              <li>
+                <a href="#">Contact Us</a>
+              </li>
+              <li>
+                <a href="#">Privacy</a>
+              </li>
+              <li>
+                <a href="#">Legal</a>
+              </li>
+              <li class="get-the-app">
+                <a href="#">Get the App!</a>
+              </li>
+            </ul>
+          </li>
+        </ul> --></div>
+    </div>
 
+    <div class="app-container"></div>
   </body>
 </html>
