--- a/index.html
+++ b/index.html
@@ -10,49 +10,5 @@
       });
     </script>
   </head>
-  <body>
-    <div class="header-navbar">
-      <div class="container">
-        <img src="img/logo.png" alt="" class="logo">
-        <!-- <ul class="nav">
-          <li>
-            <a href="/#/explore"></a>
-          </li>
-          <li>
-            <a href="/#/my-collections"></a>
-          </li>
-          <li class="dropdown">
-            <a href="/#/more"></a>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="#">How it Works</a>
-              </li>
-              <li>
-                <a href="#">Locations</a>
-              </li>
-              <li>
-                <a href="#">About Us</a>
-              </li>
-              <li>
-                <a href="#">Charities</a>
-              </li>
-              <li>
-                <a href="#">Contact Us</a>
-              </li>
-              <li>
-                <a href="#">Privacy</a>
-              </li>
-              <li>
-                <a href="#">Legal</a>
-              </li>
-              <li class="get-the-app">
-                <a href="#">Get the App!</a>
-              </li>
-            </ul>
-          </li>
-        </ul> --></div>
-    </div>
-
-    <div class="app-container"></div>
-  </body>
+  <body></body>
 </html>
