--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--[if IE]><script type="text/javascript" src="lib/console.js"></script><![endif]-->
+    <!--[if IE]><script type="text/javascript" src="jam/jquery/dist/jquery.js"></script><![endif]-->
+    <!--[if IE]><script type="text/javascript" src="lib/easyXDM.debug.js"></script><![endif]-->
     <script type="text/javascript" src="jam/require.js"></script>
     <script type="text/javascript">
       require(['app'], function(app){
