--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
     <!--[if IE]><script type="text/javascript" src="lib/console.js"></script><![endif]-->
     <!--[if IE]><script type="text/javascript" src="jam/jquery/dist/jquery.js"></script><![endif]-->
     <!--[if IE]><script type="text/javascript" src="lib/easyXDM.debug.js"></script><![endif]-->
