--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-23372459-1']);
-      _gaq.push(['_trackPageview']);
+      _gaq.push(['_trackPageview', location.pathname + location.search + location.hash]);
 
       (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
