--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Goodybag</title>
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <!--[if IE]><script type="text/javascript" src="lib/console.js"></script><![endif]-->
